Add memcached session

--- a/.env
+++ b/.env
@@ -17,4 +17,8 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=2b536b3a54ddd6274190d4017dcd2eb6
+MEMCACHED_HOST=127.0.0.1
+MEMCACHED_PASSWORD=123456
+MEMCACHED_USER=admin
+MEMCACHED_PORT=11211
 ###< symfony/framework-bundle ###
