--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -6,12 +6,14 @@ framework:
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
-    session:
-        handler_id: null
-        cookie_secure: auto
-        cookie_samesite: lax
-        storage_factory_id: session.storage.factory.native
+#    session:
+#        handler_id: null
+#        cookie_secure: auto
+#        cookie_samesite: lax
+#        storage_factory_id: session.storage.factory.native
 
+    session:
+        handler_id: session.handler.memcached
     #esi: true
     #fragments: true
     php_errors:
@@ -22,3 +24,8 @@ when@test:
         test: true
         session:
             storage_factory_id: session.storage.factory.mock_file
+
+when@prod:
+    framework:
+        session:
+            handler_id: session.handler.memcached
