--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "league/flysystem-aws-s3-v3": "^3.15",
+        "league/flysystem-bundle": "^3.1",
         "phpstan/phpstan": "^1.9",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
