--- a/config/services.yaml
+++ b/config/services.yaml
@@ -49,3 +49,11 @@ services:
         class: Symfony\Component\HttpFoundation\Session\Storage\Handler\MemcachedSessionHandler
         arguments: [ '@session.memcached', { prefix: '%memcached_session_prefix%', expiretime: '%memcached_expire%' } ]
 
+
+    Aws\S3\S3Client:
+        arguments:
+            - version: '2006-03-01'
+              region: 'ap-southeast-1'
+              credentials:
+                  key: 'AKIAQSEHME7P2XTYBUPM'
+                  secret: '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'
