--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "league/flysystem-aws-s3-v3": "^3.15",
         "league/flysystem-bundle": "^3.1",
+        "liip/imagine-bundle": "^2.10",
         "phpstan/phpstan": "^1.9",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
@@ -72,7 +73,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "6.1.*"
         }
     }
