Add jwt authentication

--- a/.env
+++ b/.env
@@ -22,3 +22,9 @@ MEMCACHED_PASSWORD=123456
 MEMCACHED_USER=admin
 MEMCACHED_PORT=11211
 ###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=ac5c3982c3b23b0cef5a9984fcc97e5e
+###< lexik/jwt-authentication-bundle ###
