--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -6,14 +6,14 @@ framework:
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
-#    session:
-#        handler_id: null
-#        cookie_secure: auto
-#        cookie_samesite: lax
-#        storage_factory_id: session.storage.factory.native
-
     session:
-        handler_id: session.handler.memcached
+        handler_id: null
+        cookie_secure: auto
+        cookie_samesite: lax
+        storage_factory_id: session.storage.factory.native
+
+#    session:
+#        handler_id: session.handler.memcached
     #esi: true
     #fragments: true
     php_errors:
