--- a/.env
+++ b/.env
@@ -28,3 +28,8 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=ac5c3982c3b23b0cef5a9984fcc97e5e
 ###< lexik/jwt-authentication-bundle ###
+
+###> doctrine/mongodb-odm-bundle ###
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_DB=symfony
+###< doctrine/mongodb-odm-bundle ###
