--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,9 @@ services:
     volumes:
       - .:/application
 
+  mongodb:
+    image: mongo
+    container_name: persistence-mongo
+    ports:
+      - 27017:27017
+
