add firebase bundle

--- a/.env
+++ b/.env
@@ -33,3 +33,4 @@ JWT_PASSPHRASE=ac5c3982c3b23b0cef5a9984fcc97e5e
 MONGODB_URL=mongodb://localhost:27017
 MONGODB_DB=symfony
 ###< doctrine/mongodb-odm-bundle ###
+FIREBASE_CONFIG=%kernel.project_dir%/config/firebase/firebase.json
