--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,11 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/mongodb-odm-bundle": "^4.5",
+        "kreait/firebase-bundle": "^5.4",
         "league/flysystem-aws-s3-v3": "^3.15",
         "league/flysystem-bundle": "^3.1",
-        "liip/imagine-bundle": "^2.10",
         "lexik/jwt-authentication-bundle": "^2.16",
+        "liip/imagine-bundle": "^2.10",
         "phpstan/phpstan": "^1.9",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
@@ -21,7 +22,10 @@
         "symfony/password-hasher": "6.1.*",
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "6.1.*",
-        "symfony/yaml": "6.1.*"
+        "symfony/twig-bundle": "6.1.*",
+        "symfony/yaml": "6.1.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
